# calimero-marketplace

./: .gitignore  LICENSE  PROGRESS.md  README.md  app-prompt.md  package.json  pnpm-lock.yaml
app/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
app/src/: App.tsx
app/src/api/: AbiClient.ts
app/src/contexts/: AuthContext.tsx
app/src/pages/home/: index.tsx
app/src/pages/login/: Authenticate.tsx  SimpleLogin.tsx
app/src/pages/marketplace/: AdminDashboard.tsx  BuyerMarketplace.tsx  MarketplaceHome.tsx  OwnerDashboard.tsx  SellerDashboard.tsx  TestInventory.tsx
base-app/: .example.env  AUTH_SETUP.md  minikit.config.ts  package-lock.json  package.json
base-app/.husky/: pre-push
base-app/app/: globals.css  page.tsx  rootProvider.tsx
base-app/app/api/: AbiClient.ts
base-app/app/api/auth/: route.ts
base-app/app/components/: ProtectedRoute.tsx
base-app/app/constants/: en.global.json
base-app/app/contexts/: AuthContext.tsx
base-app/app/marketplace/: page.tsx
base-app/app/marketplace/browse/: page.tsx
base-app/app/marketplace/listings/: page.tsx
base-app/app/marketplace/orders/: page.tsx
base-app/app/marketplace/product/[id]/: page.tsx
base-app/app/marketplace/sell/: page.tsx
base-app/app/pages/login/: Authenticate.tsx
base-app/app/pages/marketplace/: AdminDashboard.tsx  BuyerMarketplace.tsx  MarketplaceHome.tsx
base-app/app/welcome/: page.tsx
logic/: Cargo.toml  build.rs  build.sh
logic/res/: abi.json  calimero_marketplace.wasm  state-schema.json
logic/src/: lib.rs
workflows/: marketplace-bootstrap.yml
